# Xray-PINN

./: .gitignore  null
mdss_uncertainty_module/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  overnight_log.txt  pyproject.toml
mdss_uncertainty_module/.github/workflows/: tests.yml
mdss_uncertainty_module/data/processed/: .gitkeep
mdss_uncertainty_module/data/raw/: .gitkeep
mdss_uncertainty_module/data/results/: aggregate_results.json
mdss_uncertainty_module/demo/: pitch_deck.md
mdss_uncertainty_module/demo/expected_outputs/: .gitkeep
mdss_uncertainty_module/demo/sample_xrays/: .gitkeep
mdss_uncertainty_module/docs/: ai_act_mapping.md  methodology.md  validation_protocol.md
mdss_uncertainty_module/models/: .gitkeep
mdss_uncertainty_module/notebooks/: 01_uncertainty_analysis.ipynb  02_aggregate_study.ipynb
mdss_uncertainty_module/scripts/: download_data.py  generate_demo_pdfs.py  run_overnight.sh  setup.sh
mdss_uncertainty_module/src/mdss_uncertainty/: __init__.py  api.py  batch_processor.py  engine.py  report_generator.py
mdss_uncertainty_module/src/uncertainty_module/: __init__.py
mdss_uncertainty_module/src/uncertainty_module/api/: __init__.py  main.py
mdss_uncertainty_module/src/uncertainty_module/core/: __init__.py  batch_processor.py  engine.py
mdss_uncertainty_module/src/uncertainty_module/data/: __init__.py  chexpert_loader.py
mdss_uncertainty_module/src/uncertainty_module/reporting/: __init__.py  generator.py
mdss_uncertainty_module/tests/: __init__.py  test_api.py  test_engine.py
(+62 files in other folders)
